Bug 342317 - No import of entities with empty check constraints
Summary: No import of entities with empty check constraints
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.13.3
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-29 19:09 UTC by Ralf Habacker
Modified: 2014-12-29 19:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.15.1 (KDE 14.12.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-12-29 19:09:23 UTC
Umbrello contains a bug not importing entities with empty check constraints.

Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. create entity below "entity relation model" folder
3. select entity, press right mouse button and select "New"->"check constraint"
4. save as xmi file
5. open the saved xmi file

Actual Results:  
No entity has been imported

Expected Results:  
The previously saved entity should be imported
Comment 1 Ralf Habacker 2014-12-29 19:17:10 UTC
Git commit 61e49b70e95b9ecb40992063a8dfa898bee806e5 by Ralf Habacker.
Committed on 29/12/2014 at 19:10.
Pushed by habacker into branch 'Applications/14.12'.

Fix 'No import of entities with empty check constraints'.
FIXED-IN:2.15.1 (KDE 14.12.1)

M  +3    -3    umbrello/checkconstraint.cpp

http://commits.kde.org/umbrello/61e49b70e95b9ecb40992063a8dfa898bee806e5