Fix 'No import of entities with empty check constraints'.

BUG:342317
FIXED-IN:2.15.1 (KDE 14.12.1)